--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,19 +4,22 @@
           android:versionCode="1"
           android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="14"/>
+    <uses-sdk android:minSdkVersion="11"/>
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
         <activity
             android:name=".ui.MainActivity"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".ui.ActivityVacancies"
+                  android:label="@string/app_name"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
