--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,8 +18,11 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.ActivityVacancies"
+        <activity android:name=".ui.vacancy.ActivityVacancies"
                   android:label="@string/app_name"/>
+
+        <activity android:name=".ui.vacancy.ActivityDetailedVacancy"
+                  android:label="@string/activity_detail_vacancy_label"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
