Add detailed activity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,4 +25,5 @@
                   android:label="@string/activity_detail_vacancy_label"/>
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
