--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,11 +4,11 @@
           android:versionCode="1"
           android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="11"/>
+    <uses-sdk android:minSdkVersion="8"/>
     <application
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
-        android:theme="@style/Theme.AppCompat.Light.DarkActionBar" >
+        android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
         <activity
             android:name=".ui.MainActivity"
             android:windowSoftInputMode="adjustResize"
@@ -18,12 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".ui.vacancy.ActivityVacancies"
-                  android:label="@string/app_name"/>
+        <activity
+            android:name=".ui.vacancy.ActivityVacancies"
+            android:label="@string/app_name"/>
 
-        <activity android:name=".ui.vacancy.ActivityDetailedVacancy"
-                  android:label="@string/activity_detail_vacancy_label"/>
+        <activity
+            android:name=".ui.vacancy.ActivityDetailedVacancy"
+            android:label="@string/activity_detail_vacancy_label"/>
     </application>
+
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 </manifest>
